--- a/FE/Manager/ExeManager/nta0309-ecommerce-admin-dashboard.netlify.app/index.html
+++ b/FE/Manager/ExeManager/nta0309-ecommerce-admin-dashboard.netlify.app/index.html
@@ -223,7 +223,7 @@
 											</div>
 											<div class="sherah-progress-card__content">
 												<div class="sherah-progress-card__heading">
-													<span class="sherah-pcolor">Daily Visitors</span>
+													<span class="sherah-pcolor">Doanh thu/ ngày</span>
 													<h4 class="sherah-progress-card__title"><b
 															class="count-animate">$987.21M</b></h4>
 												</div>
@@ -260,7 +260,7 @@
 												<h3 class="sherah-heading__title">Total sales</h3>
 												<div class="sherah-charts-tabs">
 													<!-- Tab List -->
-													<div class="sherah-charts-tabs__list list-group " id="list-tab"
+													<!-- <div class="sherah-charts-tabs__list list-group " id="list-tab"
 														role="tablist">
 														<a class="list-group-item" data-bs-toggle="list"
 															href="#sherah_tab1" role="tab" href="profile.html">7
@@ -269,7 +269,7 @@
 															href="#sherah_tab1" role="tab">Monthly</a>
 														<a class="list-group-item" data-bs-toggle="list"
 															href="#sherah_tab1" role="tab">Yearly</a>
-													</div>
+													</div> -->
 												</div>
 												<!-- End Topbar -->
 											</div>
@@ -290,7 +290,7 @@
 											class="charts-main sherah-default-bg charts-home-two sherah-border mg-top-30">
 											<!-- Top Heading -->
 											<div class="charts-main__heading  mg-btm-20">
-												<h3 class="sherah-heading__title">Monthly Statistics</h3>
+												<h3 class="sherah-heading__title">Chức năng đang phát triển(-o.o-)</h3>
 											</div>
 											<div class="sherah-flex-between mg-btm-30">
 												<div class="charts-main__middle m-0">
@@ -299,17 +299,17 @@
 														<li>
 															<span
 																class="sherah-progress-list__color sherah-color4__bg"></span>
-															<p>Profit <span>13,570</span></p>
+															<p>Profit <span>0</span></p>
 														</li>
 														<li>
 															<span
 																class="sherah-progress-list__color sherah-color1__bg"></span>
-															<p>Refunds<span>455,877</span></p>
+															<p>Refunds<span>0</span></p>
 														</li>
 														<li>
 															<span
 																class="sherah-progress-list__color sherah-color3__bg"></span>
-															<p>Expenses<span>455,877</span></p>
+															<p>Expenses<span>0</span></p>
 														</li>
 													</ul>
 												</div>
