--- a/FE/Manager/ExeManager/nta0309-ecommerce-admin-dashboard.netlify.app/profile-info.html
+++ b/FE/Manager/ExeManager/nta0309-ecommerce-admin-dashboard.netlify.app/profile-info.html
@@ -14,7 +14,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 	<!-- Site Title -->
-	<title>Sherah - HTML eCommerce Dashboard Template</title>
+	<title>Thông tin cá nhân</title>
 
 	<!-- Font -->
 	<link
@@ -60,10 +60,10 @@
 							<div class="sherah-dsinner">
 								<!-- Sherah Breadcrumb -->
 								<div class="sherah-breadcrumb mg-top-30">
-									<h2 class="sherah-breadcrumb__title">Setting</h2>
+									<h2 class="sherah-breadcrumb__title">Cài đặt</h2>
 									<ul class="sherah-breadcrumb__list">
-										<li><a href="#">Home</a></li>
-										<li class="active"><a href='profile-info.html'>Personal Information</a></li>
+										<li><a href="#">Trang chủ</a></li>
+										<li class="active"><a href='profile-info.html'>Thông tin cá nhân</a></li>
 									</ul>
 								</div>
 								<!-- End Sherah Breadcrumb -->
@@ -88,8 +88,7 @@
 																</g>
 															</svg>
 
-														</span><span class="sherah-psidebar__title">Personal
-															Info</span></a>
+														</span><span class="sherah-psidebar__title">Thông tin cá nhân</span></a>
 
 
 
@@ -106,7 +105,7 @@
 																		transform="translate(-115.541 -230.447)" />
 																</g>
 															</svg>
-														</span><span class="sherah-psidebar__title">Change Password
+														</span><span class="sherah-psidebar__title">Đổi mật khẩu
 														</span></a>
 
 												</div>
@@ -153,13 +152,13 @@
 																						class="sherah-profile-info__v2 mg-top-30">
 																						<h3
 																							class="sherah-profile-info__heading mg-btm-30">
-																							Personal Information</h3>
+																							Thông tin cá nhân</h3>
 																						<ul
 																							class="sherah-profile-info__list sherah-dflex-column">
 																							<li class="sherah-dflex">
 																								<h4
 																									class="sherah-profile-info__title">
-																									Full Name :</h4>
+																									Họ và tên :</h4>
 																								<p class="sherah-profile-info__text"
 																									id="providerFullName">
 																								</p>
@@ -167,7 +166,7 @@
 																							<li class="sherah-dflex">
 																								<h4
 																									class="sherah-profile-info__title">
-																									About :</h4>
+																									Mô tả :</h4>
 																								<p class="sherah-profile-info__text"
 																									id="providerAbout">
 																								</p>
@@ -183,7 +182,7 @@
 																							<li class="sherah-dflex">
 																								<h4
 																									class="sherah-profile-info__title">
-																									Phone :</h4>
+																									Số điện thoại :</h4>
 																								<p class="sherah-profile-info__text"
 																									id="providerPhone">
 																								</p>
@@ -193,40 +192,39 @@
 																							class="provider-form mg-top-30">
 																							<h3
 																								class="sherah-profile-info__heading mg-btm-20">
-																								Provider Information
+																								Thông tin nhà cung cấp
 																							</h3>
 
 																							<div class="provider-field">
 																								<label
-																									for="brandNameInput">Brand
-																									Name</label>
+																									for="brandNameInput">
+																									Tên thương hiệu</label>
 																								<input
 																									id="brandNameInput"
 																									type="text"
-																									placeholder="Brand name">
+																									placeholder="Tên thương hiệu">
 																							</div>
 
 																							<div class="provider-field">
 																								<label
-																									for="providerTypeInput">Provider
-																									Type</label>
+																									for="providerTypeInput">Loại nhà cung cấp</label>
 																								<select
 																									id="providerTypeInput">
 																									<option
 																										value="OUTFIT">
-																										OUTFIT</option>
+																										Trang phục</option>
 																									<option
 																										value="SERVICE">
-																										SERVICE</option>
+																										Dịch vụ</option>
 																									<option
 																										value="BOTH">
-																										BOTH</option>
+																										Cả hai</option>
 																								</select>
 																							</div>
 
 																							<div class="provider-field">
 																								<label
-																									for="descriptionInput">Description</label>
+																									for="descriptionInput">Mô tả</label>
 																								<textarea
 																									id="descriptionInput"
 																									rows="4"
@@ -235,18 +233,17 @@
 
 																							<div class="provider-field">
 																								<label
-																									for="logoFile">Logo</label>
+																									for="logoFile">Ảnh đại diện</label>
 																								<input id="logoFile"
 																									type="file"
 																									accept="image/*">
-																								<small id="logoHint">No
-																									logo yet</small>
+																								<small id="logoHint">
+																									</small>
 																							</div>
 
 																							<button id="btnSaveProvider"
 																								type="button"
-																								class="sherah-btn sherah-btn__primary">
-																								Save Provider Info
+																								class="sherah-btn sherah-btn__primary">Lưu thông tin
 																							</button>
 
 
@@ -272,7 +269,7 @@
 																class="sherah-paymentm sherah__item-group sherah-default-bg sherah-border ">
 																<h4
 																	class="sherah__item-group sherah-default-bg sherah-border__title">
-																	Change Password</h4>
+																	Đổi mật khẩu</h4>
 																<div class="row">
 																	<div class="col-xxl-8  col-lg-6 col-md-6 col-12">
 																		<!-- Sign in Form -->
@@ -280,8 +277,7 @@
 																			class="sherah-wc__form-main sherah-form-main--v2 p-0"
 																			id="changePasswordForm">
 																			<div class="form-group">
-																				<label class="sherah-wc__form-label">Old
-																					Password *</label>
+																				<label class="sherah-wc__form-label">Mật khẩu cũ *</label>
 																				<div class="form-group__input">
 																					<input class="sherah-wc__form-input"
 																						id="oldPassword" type="password"
@@ -291,8 +287,7 @@
 																			</div>
 
 																			<div class="form-group">
-																				<label class="sherah-wc__form-label">New
-																					Password *</label>
+																				<label class="sherah-wc__form-label">Mật khẩu mới *</label>
 																				<div class="form-group__input">
 																					<input class="sherah-wc__form-input"
 																						id="newPassword" type="password"
@@ -303,8 +298,7 @@
 
 																			<div class="form-group">
 																				<label
-																					class="sherah-wc__form-label">Re-enter
-																					Password *</label>
+																					class="sherah-wc__form-label">Xác nhận mật khẩu mới *</label>
 																				<div class="form-group__input">
 																					<input class="sherah-wc__form-input"
 																						id="confirmPassword"
@@ -318,7 +312,7 @@
 																				<button id="btnChangePassword"
 																					type="submit"
 																					class="sherah-btn sherah-btn__primary">
-																					Changed Password
+																					Đổi mật khẩu
 																				</button>
 																			</div>
 																		</form>
