--- a/FE/Manager/ExeManager/nta0309-ecommerce-admin-dashboard.netlify.app/dashboard.html
+++ b/FE/Manager/ExeManager/nta0309-ecommerce-admin-dashboard.netlify.app/dashboard.html
@@ -83,7 +83,7 @@
                                                 </g>
                                             </svg>
                                         </span>
-                                        <span class="menu-bar__name">Dashboard</span></span></a></span>
+                                        <span class="menu-bar__name">Bảng điều khiển</span></span></a></span>
 
                             </li>
                             
@@ -97,16 +97,16 @@
                                                     transform="translate(-547.61 -368.076)" />
                                             </svg>
                                         </span>
-                                        <span class="menu-bar__name">Products</span></span> <span
+                                        <span class="menu-bar__name">Sản phẩm</span></span> <span
                                         class="sherah__toggle"></span></a></span>
                                 <!-- Dropdown Menu -->
                                 <div class="collapse sherah__dropdown" id="menu-item_products"
                                     data-bs-parent="#sherahMenu">
                                     <ul class="menu-bar__one-dropdown">
                                         <li><a href='products.html'><span class="menu-bar__text"><span
-                                                        class="menu-bar__name">Products</span></span></a></li>
+                                                        class="menu-bar__name">Danh sách sản phẩm</span></span></a></li>
                                         <li><a href='upload-product.html'><span class="menu-bar__text"><span
-                                                        class="menu-bar__name">Upload Product</span></span></a></li>
+                                                        class="menu-bar__name">Tải lên sản phẩm</span></span></a></li>
                                     </ul>
                                 </div>
                             </li>
@@ -125,14 +125,14 @@
                                                 </g>
                                             </svg>
                                         </span>
-                                        <span class="menu-bar__name">Orders</span></span><span
+                                        <span class="menu-bar__name">Đơn hàng</span></span><span
                                         class="sherah__toggle"></span></a></span>
                                 <!-- Dropdown Menu -->
                                 <div class="collapse sherah__dropdown" id="menu-item__orders"
                                     data-bs-parent="#sherahMenu">
                                     <ul class="menu-bar__one-dropdown">
                                         <li><a href='order-list.html'><span class="menu-bar__text"><span
-                                                        class="menu-bar__name">Order List</span></span></a></li>
+                                                        class="menu-bar__name">Danh sách đơn hàng</span></span></a></li>
 
                                     </ul>
                                 </div>
@@ -153,7 +153,7 @@
                                                 </g>
                                             </svg>
                                         </span>
-                                        <span class="menu-bar__name">Settings</span></span></a></span>
+                                        <span class="menu-bar__name">Cài đặt</span></span></a></span>
                             </li>
                         </ul>
                     </div>
