--- a/FE/Manager/ExeManager/nta0309-ecommerce-admin-dashboard.netlify.app/order-list.html
+++ b/FE/Manager/ExeManager/nta0309-ecommerce-admin-dashboard.netlify.app/order-list.html
@@ -14,7 +14,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 	<!-- Site Title -->
-	<title>Sherah - HTML eCommerce Dashboard Template</title>
+	<title>Danh sách đơn hàng</title>
 
 	<!-- Font -->
 	<link
@@ -58,10 +58,10 @@
 									<div class="col-12 sherah-flex-between">
 										<!-- Sherah Breadcrumb -->
 										<div class="sherah-breadcrumb">
-											<h2 class="sherah-breadcrumb__title">Order list</h2>
+											<h2 class="sherah-breadcrumb__title">Danh sách đơn hàng</h2>
 											<ul class="sherah-breadcrumb__list">
-												<li><a href="#">Home</a></li>
-												<li class="active"><a href='order-list.html'>Order List</a></li>
+												<li><a href="#">Trang chủ</a></li>
+												<li class="active"><a href='order-list.html'>Danh sách đơn hàng</a></li>
 											</ul>
 										</div>
 										<!-- End Sherah Breadcrumb -->
@@ -73,14 +73,14 @@
 										<!-- sherah Table Head -->
 										<thead class="sherah-table__head">
 											<tr>
-												<th class="sherah-table__column-1 sherah-table__h1">Order ID</th>
+												<th class="sherah-table__column-1 sherah-table__h1">Mã đơn</th>
 
-												<th class="sherah-table__column-3 sherah-table__h3">Date</th>
-												<th class="sherah-table__column-4 sherah-table__h4">Payment Status</th>
-												<th class="sherah-table__column-5 sherah-table__h5">Total</th>
+												<th class="sherah-table__column-3 sherah-table__h3">Ngày tạo</th>
+												<th class="sherah-table__column-4 sherah-table__h4">Trạng thái thanh toán</th>
+												<th class="sherah-table__column-5 sherah-table__h5">Tổng tiền</th>
 
-												<th class="sherah-table__column-7 sherah-table__h7">Order Status</th>
-												<th class="sherah-table__column-8 sherah-table__h8">Action</th>
+												<th class="sherah-table__column-7 sherah-table__h7">Trạng thái đơn hàng</th>
+												<th class="sherah-table__column-8 sherah-table__h8">Hành động</th>
 											</tr>
 										</thead>
 										<tbody id="orders-tbody" class="sherah-table__body"></tbody>
@@ -151,9 +151,9 @@
 		function paymentHtml(status) {
 			const s = (status || "").toUpperCase();
 			if (s === "SUCCESS" || s === "PAID") {
-				return `<div class="sherah-table__status sherah-color2 sherah-color2__bg--opactity">Paid</div>`;
+				return `<div class="sherah-table__status sherah-color2 sherah-color2__bg--opactity">Đã thanh toán</div>`;
 			}
-			return `<div class="sherah-table__status sherah-color1 sherah-color1__bg--opactity">Unpaid</div>`;
+			return `<div class="sherah-table__status sherah-color1 sherah-color1__bg--opactity">Chưa thanh toán</div>`;
 		}
 
 		function orderHtml(status) {
@@ -208,7 +208,7 @@
 						render: function (id) {
 							return `
               <div class="sherah-language-form__input">
-                <input class="sherah-language-form__check" type="checkbox">
+                
                 <p class="crany-table__product--number">
                   <a href="#" class="sherah-color1">#${id}</a>
                 </p>
@@ -244,7 +244,7 @@
 						data: null,
 						orderable: false,
 						render: function () {
-							return `<a href="#" class="sherah-table__action sherah-color2 sherah-color3__bg--opactity">View</a>`;
+							return `<a href="#" class="sherah-table__action sherah-color2 sherah-color3__bg--opactity">Xem chi tiết</a>`;
 						}
 					}
 				]
